# C-Training

./: CMakeLists.txt  README.md
src/: Notes.h  main.cpp
src/private/: codeTest.cpp  log.cpp
src/public/: Notes.h  codeTest.h  log.h
